# aero-cpp-lib

./: .gitignore  CMakeLists.txt  CONTRIBUTION.md  ISSUES.md  README.md
docs/: doxyfile
docs/html/: Data_8hpp_source.html  Message_8hpp_source.html  Utility_8hpp_source.html  annotated.html  classaero_1_1Message-members.html  classaero_1_1Message.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  group__aero.html  group__bit.html  group__convert.html  group__print.html  index.html  menudata.js  modules.html  namespaceaero.html  namespaceaero_1_1bit.html  namespaceaero_1_1convert.html  namespaceaero_1_1print.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html
docs/latex/: annotated.tex  classaero_1_1Message.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  group__aero.tex  group__bit.tex  group__convert.tex  group__print.tex  modules.tex  namespaceaero.tex  namespaceaero_1_1bit.tex  namespaceaero_1_1convert.tex  namespaceaero_1_1print.tex  refman.tex  (+1 more)
examples/: comm_send.cpp  main.cpp  serial_test.cpp  serial_test.ino
include/: Data.hpp  Message.hpp  MessageConversions.hpp  Pins.hpp  Sensors.hpp  Serial.hpp  Utility.hpp
message/: CMakeLists.txt  Data.hpp  ISSUES.md  Message.hpp  MessageFormatter.hpp  README.md  Structures.hpp  main.cpp
src/: Message.cpp
swig/: CMakeLists.txt  aero.i
tests/: test_Message.cpp  test_Serial.cpp  test_Utility.cpp  tests.cpp
(+28 files in other folders)
